# htmarkup

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  config.h.in  configure.ac  libtool
data/phrases_proj/: archive.txt  fio.txt  health.txt  health_shared.txt  lady.txt  mskspb_streets.txt  news.txt  rus_city.txt  work.txt
libs/: defs.hpp  icuincls.h
libs/config/: Makefile.am  config.hpp  xmlconfig.cpp
libs/hashes/: Makefile.am  hashes.hpp  mmhash.cpp
libs/lem_interface/: Makefile.am  lem_interface.cpp  lem_interface.hpp
libs/qclassify/: Makefile.am  basic_phrase_storage.cpp  collection_indexer.cpp  collection_loader.cpp  htmlmark.hpp  phrase_indexer.cpp  phrase_searcher.cpp  qchtmlmark.cpp  qcindex_reader.cpp  qcindex_writer.cpp  qclassify.hpp  qclassify_impl.hpp  qphrase_splitter.cpp  qphrase_splitter_pcre.cpp  qphrase_splitter_plain.cpp  regexp_aux.cpp  regexp_reader.cpp  regexp_writer.cpp  scatter_storage.cpp  searcher_aux.cpp
libs/utils/: Makefile.am  base64.cpp  conv.cpp  conv.hpp  fileutils.cpp  fileutils.hpp  hash_array.hpp  memfile.cpp  memfile.hpp  memio.hpp  ptr_array.hpp  str_escape.cpp  stringutils.cpp  stringutils.hpp  syserror.hpp  unicode_utils.cpp
libs/utils/bits/: escape_tbl.hpp
m4.incl/: expat.m4
perllib/QClassify/: .gitignore  Changes  MANIFEST  MYMETA.yml  Makefile.PL.in  QClassify.c  QClassify.xs  README  typemap
perllib/QClassify/lib/: QClassify.pm
perllib/QClassify/t/: 01-QClassify.t  02-Markup.t  03-Markup.t  04-Markup.t  05-Markup_reload.t  QClassify.t  bugfixes.t  config.xml  config2.xml  config3.xml  config4.xml  config5.xml  config_bug1.xml
perllib/QClassify/t/phrases/: hitech.qc  horo.qc  os.qc  school.qc  scm.qc  scm2.qc
pythonlib/pyQClassify/: __init__.py  memory_test.py  new_api.py  new_memory_test.py  pyQClassify.cpp  pyQClassify.hpp  pyQClassify.i  setup.py  swig_unicode_string.patch  test.py  wrapper.py
pythonlib/pyQClassify/data/: config.xml  index  medicaments.txt  medrubrics.txt  no_index_config.xml  text  wrong_config.xml
pythonlib/pyQClassify/patches/: QClassify.patch
pythonlib/pyQClassify/src/: pyQClassify.cpp
qclassify/: Makefile.am  cphrase.cpp  idx_phrases.cpp  qcmarker.cpp
scripts/: streets_conv.pl
tests/integration/: T-01.config.xml  T-01.dump  T-01.sh  T-02.config.xml  T-02.dump  T-02_DISABLED.sh  T-03.config.xml  T-03.dump  T-03_DISABLED.sh  T-04-empty.config.xml  T-04-empty.out.dump  T-04-empty.sh  T-05-silent.config.xml  T-05-silent.sh  common.incl.sh  run.sh
tests/integration/phrases/: streets.qc
tests/unit/: Makefile.am
tests/unit/config/: Makefile.am  badconfig.xml  config_test.cpp  testconfig.xml
tests/unit/qclassify/: Makefile.am  qchtml_test.cpp  qclassify_test.cpp
tests/unit/qclassify/cfg/: config_2qc.xml  config_markercfg.xml  config_simple.xml  config_street.xml
tests/unit/qclassify/phrases/: city.qc  coffee.qc  events.qc  hitech.qc  linux.qc  school.qc  streets.qc  trash.qc
tests/unit/runner/: Makefile.am  runner.cpp
tests/unit/utils/: Makefile.am  utils_test.cpp
